@@ -249,6 +249,11 @@ typedef struct gfc_ss
   /* Non-null if the ss is part of a nested loop.  */
   struct gfc_ss *parent;
 
+  /* If the evaluation of an expression requires a nested loop (for example
+     if the sum intrinsic is evaluated inline), this points to the nested
+     loop's gfc_ss.  */
+  struct gfc_ss *nested_ss;
+
   /* The loop this gfc_ss is in.  */
   struct gfc_loopinfo *loop;
 
